--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         </section>
     </main>
     <footer>
-        <p>©2025, White Water Rafting, Everett Havey</p>
+        <p>©2025, Splashy Dashiez, Stampycargos</p>
         <nav class="socaillinks">
             <a href="https://www.roblox.com/communities/34858532/Splashy-Dashiez#!/about">
                 <img src="images//SplashyDashiez2.webp" alt="Roblox">
