--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         <p>©2025, Splashy Dashiez, Stampycargos</p>
         <nav class="socaillinks">
             <a href="https://www.roblox.com/communities/34858532/Splashy-Dashiez#!/about">
-                <img src="images//SplashyDashiez2.webp" alt="Roblox">
+                <img src="images/group.png" alt="Roblox">
             </a>
             <a href="https://x.com/SplashyDashiez">
                 <img src="images/Twitter.png" alt="Twitter">
