--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <ul class="box">
-                <img src="images/SplashyDashiezTransparentBackGround.webp" alt="logo">
+                <img src="images/SplashyDashiez2.jpg" alt="logo">
                 <li><a href="about.html">About</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="washes.html">Trips</a></li>
