--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <img src="images/SplashyDashiez2.jpg" alt="logo">
                 <li><a href="about.html">About</a></li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="washes.html">Trips</a></li>
+                <li><a href="washes.html">washes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
